@@ -1,0 +1,3 @@
+{
+    "dmodservices":{"iconPath":"graphics/icons/skills/derelict_contingent.png"}
+}
